<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/homeiconsilhouette"
        android:title="@string/title_home" />
    <item
        android:id="@+id/events"
        android:icon="@drawable/electioneventonacalendarwithstarsymbol"
        android:title="@string/title_events" />
    <item
        android:id="@+id/live"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/bayans"
        android:icon="@drawable/imagegallery"
        android:title="@string/title_monthlybayan" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />


</menu>
