<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/title_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_power_button"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/contacts"
        android:orderInCategory="100"
        android:title="@string/title_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/watsapp"
        android:orderInCategory="100"
        android:title="@string/title_watsapp"
        app:showAsAction="never" />

</menu>
