<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <RelativeLayout
        android:id="@+id/background"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView

            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



    <RelativeLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:id="@+id/nameview"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/CircularImageOntop"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:elevation="2dp"
                android:src="#BD7E00"
                app:civ_border_color="#FFF"
                app:civ_border_width="4dp"
                tools:layout_editor_absoluteX="264dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/CircularImageOntop"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                android:textColor="#FFF"
                android:textSize="125sp"
                />

            </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_below="@id/nameview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/users"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:textColor="#998989"
                    android:hint="Set name from Account Settings"
                    android:textSize="25dp"
                    android:textStyle="bold"
                     />

                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:textColor="#998989"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/notify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rippler"
                    android:textAlignment="textStart"
                    android:textColor="#998989"
                    android:text="@string/title_notify" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rippler"
                    android:textColor="#998989"
                    android:textAlignment="textStart"
                    android:text="@string/title_uploads" />


                <Button
                    android:id="@+id/changeChannel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rippler"
                    android:textColor="#998989"
                    android:textAlignment="textStart"
                    android:text="@string/title_channel" />

                <Button
                    android:id="@+id/updateprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rippler"
                    android:textColor="#998989"
                    android:textAlignment="textStart"
                    android:text="@string/title_updateprofile" />



            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


        </ScrollView>

    </RelativeLayout>



</RelativeLayout>